# hdf5r

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENSE  Makefile  NAMESPACE  NEWS.md  README.md  TODO.md  _pkgdown.yml  appveyor.yml  cleanup  configure  configure.ac  configure.win  cran-comments.md  travis_setup.sh  wercker.yml
.github/: install_hdf5.sh
.github/workflows/: R-CMD-check.yaml
R/: Common_functions.R  Compound.R  H5constants.R  Helper_functions.R  Misc.R  R6Classes.R  R6Classes_H5A.R  R6Classes_H5D.R  R6Classes_H5File.R  R6Classes_H5Group.R  R6Classes_H5P.R  R6Classes_H5R.R  R6Classes_H5S.R  R6Classes_H5T.R  adapt_during_onLoad.R  convert.R  factor_ext.R  globalVariables.R  h5wrapper.R  hdf5r.R  high_level_UI.R  open_objs.R  zzz.R
docs/: 404.html  CNAME  LICENSE-text.html  LICENSE.html  TODO.html  authors.html  index.html  pkgdown.yml  sitemap.xml
docs/articles/: hdf5r.html  index.html
docs/news/: index.html
docs/reference/: H5A-class.html  H5D-class.html  H5File-class.html  H5File.open.html  H5GTD_factory.html  H5Group-class.html  H5Group_access.html  H5P-class.html  H5P_ATTRIBUTE_CREATE-class.html  H5P_CLASS-class.html  H5P_DATASET_ACCESS-class.html  H5P_DATASET_CREATE-class.html  H5P_DATASET_XFER-class.html  H5P_DEFAULT-class.html  H5P_FILE_ACCESS-class.html  H5P_FILE_CREATE-class.html  H5P_LINK_ACCESS-class.html  H5P_LINK_CREATE-class.html  H5P_OBJECT_COPY-class.html  H5P_OBJECT_CREATE-class.html  H5P_factory.html  H5R-class.html  H5R_DATASET_REGION-class.html  H5R_OBJECT-class.html  H5R_functions.html  H5RefClass-class.html  H5S-class.html  H5S_ALL-class.html  H5S_H5D_subset_assign.html  H5T-class.html  H5T_ARRAY-class.html  H5T_COMPLEX-class.html  H5T_COMPOUND-class.html  H5T_ENUM-class.html  H5T_FLOAT-class.html  H5T_INTEGER-class.html  H5T_LOGICAL-class.html  H5T_STRING-class.html  H5T_VLEN-class.html  H5T_extractID.html  (+47 more)
inst/: download_libwin.sh  h5_changes.md
inst/CWrappers_1.10.0/: all_const.csv  const_export_h.brew  datatype_export_c.brew  datatype_export_h.brew
inst/CWrappers_1.10.2/: .gitignore  FindAndReplace.R  HelperStructs.h  create_constants_wrapper.R  create_datatype_wrappers.R  helperFunctions.R  identify_prototypes.R  makefile
inst/CWrappers_1.10.3/: README  all_const.csv  createCWrappers.R  injectionCode.R  makefile
inst/CWrappers_1.12.0/: FindAndReplace.R  auto_include.h  createCWrappers.R  create_datatype_wrappers.R  identify_prototypes.R  makefile  order_struct_by_dependency.R
inst/CWrappers_1.8.12/: Apache_Copyright_Notice.txt  FindAndReplace.R  README  all_const.csv  createCWrappers.R  create_datatype_wrappers.R  makefile
inst/CWrappers_1.8.14/: .gitignore  README  identify_prototypes.R  makefile
inst/CWrappers_1.8.16/: README  const_export_c.brew  makefile  remove_c_comments.R
inst/function_overview/: .gitignore  createFunctionOverview.R  function_overview.brew  function_overview.html  makefile
inst/m4/: ax_lib_hdf5.m4  hh_hdf5rlib.m4
inst/speed_check/: Speed_test.R
inst/test_implementations/: reorder.R
man/: H5A-class.Rd  H5Class_overview.Rd  H5D-class.Rd  H5File-class.Rd  H5File.open.Rd  H5GTD_factory.Rd  H5Group-class.Rd  H5Group_access.Rd  H5P-class.Rd  H5P_ATTRIBUTE_CREATE-class.Rd  H5P_CLASS-class.Rd  H5P_DATASET_ACCESS-class.Rd  H5P_DATASET_CREATE-class.Rd  H5P_DATASET_XFER-class.Rd  H5P_DEFAULT-class.Rd  H5P_FILE_ACCESS-class.Rd  H5P_FILE_CREATE-class.Rd  H5P_LINK_ACCESS-class.Rd  H5P_LINK_CREATE-class.Rd  H5P_OBJECT_COPY-class.Rd  H5P_OBJECT_CREATE-class.Rd  H5P_factory.Rd  H5R-class.Rd  H5R_DATASET_REGION-class.Rd  H5R_OBJECT-class.Rd  H5R_functions.Rd  H5RefClass-class.Rd  H5S-class.Rd  H5S_ALL-class.Rd  H5S_DEFAULT-class.Rd  H5S_H5D_subset_assign.Rd  H5T-class.Rd  H5T_ARRAY-class.Rd  H5T_COMPLEX-class.Rd  H5T_COMPOUND-class.Rd  H5T_ENUM-class.Rd  H5T_FLOAT-class.Rd  H5T_INTEGER-class.Rd  H5T_LOGICAL-class.Rd  H5T_STRING-class.Rd  (+73 more)
src/: .gitignore  H5Error.c  H5Error.h  H5ls.c  H5ls.h  Makevars.in  Makevars.win  README  Wrapper_manual_H5T.c  Wrapper_manual_H5T.h  convert.c  convert.h  export_all.c  export_manual.h  global.h  hdf5r_init.c
src/1_10_0/: HelperStructs.h  Wrapper_auto_H5.h  Wrapper_auto_H5A.c  Wrapper_auto_H5A.h  Wrapper_auto_H5D.c  Wrapper_auto_H5D.h  Wrapper_auto_H5F.c  Wrapper_auto_H5F.h  Wrapper_auto_H5FDfamily.c  Wrapper_auto_H5FDsec2.c  Wrapper_auto_H5G.c  Wrapper_auto_H5G.h  Wrapper_auto_H5I.c  Wrapper_auto_H5L.c  Wrapper_auto_H5LT.c  Wrapper_auto_H5O.c  Wrapper_auto_H5P.c  Wrapper_auto_H5P.h  Wrapper_auto_H5R.c  Wrapper_auto_H5R.h  Wrapper_auto_H5S.h  Wrapper_auto_H5T.c  Wrapper_auto_H5T.h  const_export.c  datatype_export.c  datatype_export.h  export_auto.h
src/1_10_2/: Wrapper_auto_H5D.c  Wrapper_auto_H5D.h  Wrapper_auto_H5F.c  Wrapper_auto_H5FDfamily.h  Wrapper_auto_H5FDlog.c  Wrapper_auto_H5FDlog.h  Wrapper_auto_H5FDsec2.h  Wrapper_auto_H5FDstdio.c  Wrapper_auto_H5O.h  Wrapper_auto_H5P.h  const_export.h  datatype_export.c  datatype_export.h  export_auto.h
src/1_10_3/: Wrapper_auto_H5D.c  Wrapper_auto_H5D.h  Wrapper_auto_H5DS.c  Wrapper_auto_H5DS.h  Wrapper_auto_H5F.h  Wrapper_auto_H5FDcore.h  Wrapper_auto_H5FDstdio.h  Wrapper_auto_H5O.c  Wrapper_auto_H5O.h  Wrapper_auto_H5P.c  Wrapper_auto_H5R.c  Wrapper_auto_H5R.h  Wrapper_auto_H5S.c  Wrapper_auto_H5T.c  const_export.c  const_export.h  datatype_export.c  datatype_export.h  export_auto.h
src/1_12_0/: HelperStructs.h  Wrapper_auto_H5.c  Wrapper_auto_H5D.c  Wrapper_auto_H5D.h  Wrapper_auto_H5E.c  Wrapper_auto_H5F.c  Wrapper_auto_H5F.h  Wrapper_auto_H5FDcore.c  Wrapper_auto_H5G.h  Wrapper_auto_H5IM.h  Wrapper_auto_H5L.c  Wrapper_auto_H5L.h  Wrapper_auto_H5O.c  Wrapper_auto_H5O.h  Wrapper_auto_H5P.c  Wrapper_auto_H5P.h  Wrapper_auto_H5R.c  Wrapper_auto_H5R.h  Wrapper_auto_H5S.c  Wrapper_auto_H5S.h  Wrapper_auto_H5T.c  Wrapper_auto_H5T.h  export_auto.h  (+3 more)
tools/: winlibs.R
vignettes/: DatatypeConversionDiagram.xml  hdf5r.Rmd
(+80 files in other folders)
